--- a/index.html
+++ b/index.html
@@ -1,13 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hockey's</title>
+    <!-- Tailwind and DaisyUI -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
-<script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <style>
+        .font-manrope {
+            font-family: "Manrope", sans-serif;
+        }
+    </style>
 </head>
-<body>
-    
+
+<body class="font-manrope">
+    <header>
+        <nav>
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                    <div class="dropdown">
+                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h8m-8 6h16" />
+                            </svg>
+                        </div>
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                            <li><a>Home</a></li>
+                            <li><a>About</a></li>
+                            <li><a>Page</a></li>
+                            <li><a>Blog</a></li>
+                            <li><a>Contact</a></li>
+                        </ul>
+                    </div>
+                    <a class="btn btn-ghost text-xl font-extrabold 
+                    ">Hockey<span class="text-[#FF4240] &nbsp">’</span>s</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu menu-horizontal px-1">
+                        <li><a class="text-[#FF4240]">Home</a></li>
+                        <li><a>About</a></li>
+                        <li><a>Page</a></li>
+                        <li><a>Blog</a></li>
+                        <li><a>Contact</a></li>
+                    </ul>
+                </div>
+                <div class="navbar-end">
+                    <a class="btn bg-[#FF4240] text-white">Get Ticket</a>
+                </div>
+            </div>
+        </nav>
+        <!-- banner section -->
+        <section class="mt-24">
+            <div class="carousel w-full">
+                <div id="slide1" class="carousel-item relative w-full">
+                    <img src="Images/1.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide4" class="btn btn-circle">❮</a>
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide2" class="carousel-item relative w-full">
+                    <img src="Images/2.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide3" class="carousel-item relative w-full">
+                    <img src="Images/3.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
+
+    </header>
+    <main>
+        <!-- Professional Hockeys Club -->
+        <section class="mt-24">
+            <div class="text-center">
+                <h2 class="text-2xl font-extrabold">Professional Hockeys Club</h2>
+                <p class="pt-12 pr-10 lg:pr-24 pl-10 lg:pl-24 pb16 lg:pb-24">professional hockey clubs play a central
+                    role in the competitive landscape of the sport, providing entertainment for fans and serving as a
+                    platform for elite athletes to showcase their skills on a grand stage.</p>
+
+            </div>
+            <hr>
+            <!-- progress -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mt-12 ">
+                <div class="text-center">
+                    <div class="radial-progress text-[#FF4240]" style="--value:87;" role="progressbar"><span class="text-black font-extrabold">87%</span></div>
+                    <h4 class="text-xl font-bold mt-12">Prayer Facility</h4>
+                    <p class="pt-6">Some companies and organizations offer prayer rooms to accommodate the religious
+                        practices of their employees</p>
+
+                </div>
+                <div class="text-center">
+                    <div class="radial-progress text-[#49D293]" style="--value:95;" role="progressbar"><span class="text-black font-extrabold">95%</span></div>
+                    <h4 class="text-xl font-bold mt-12">Experienced Coach</h4>
+                    <p class="pt-6">The coach may have a background as a player, coaching qualifications, and a deep
+                        understanding of the nuances of the sport.</p>
+                </div>
+                <div class="text-center">
+                    <div class="radial-progress text-[#FFB546]" style="--value:90;" role="progressbar"><span class="text-black font-extrabold">90%</span></div>
+                    <h4 class="text-xl font-bold mt-12">Senior Player</h4>
+                    <p class="pt-6">Senior players often serve as leaders within the team, providing guidance to younger
+                        teammates and contributing to the overall team dynamic.</p>
+
+                </div>
+                <div class="text-center">
+                    <div class="radial-progress text-[#4C8DF1]" style="--value:80;" role="progressbar"><span class="text-black font-extrabold">80%</span></div>
+                    <h4 class="text-xl font-bold mt-12">Training Ground</h4>
+                    <p class="pt-6">The training ground is a dedicated facility where sports teams, including
+                        professional and elite athletes, practice and refine their skills.</p>
+
+                </div>
+            </div>
+        </section>
+        <!-- Program Sections -->
+        <section class="mt-24">
+            <div class="text-center">
+                <h3 class="text-2xl font-extrabold">Program Sections</h3>
+                <p class=" mt-10 lg:pr-32 lg:pl-32">An experienced coach guides senior players through strategic
+                    training sessions at the dedicated training ground, fostering skill development, team cohesion, and
+                    tactical proficiency.</p>
+
+            </div>
+            <div>
+                <div>
+
+                </div>
+
+            </div>
+
+        </section>
+        <!-- Our New Products section -->
+        <section class="mt-24">
+            <div class="text-center">
+                <h2 class="text-4xl font-extrabold">Our New Products</h2>
+                <p class="mt-6">Introducing our innovative new products, designed to elevate your experience with cutting-edge
+                    features and enhanced performance.
+                </p>
+
+            </div>
+            <div>
+
+            </div>
+        </section>
+        <!-- Get In Touch section -->
+        <section class="mt-24 flex">
+            <div>
+                <div>
+                    <img src="Images/Group 1171275317.png" alt="">
+                    <input type="text" placeholder="Phone Number : 
+                    (+62) 123-321-543" class="input input-ghost w-full max-w-xs" />
+
+                </div>
+                <div></div>
+                <div></div>
+            </div>
+            <div>
+
+            </div>
+        </section>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
