--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                 <p class="pt-6">Clients inquire, seeking solutions divine,
                     Two lines of wisdom, their path to align.</p>
             </div>
-            <div class="hero min-h-screen bg-base-200">
+            <div class="hero min-h-screen bg-base-200 mt-16">
                 <div class="hero-content flex-col lg:flex-row">
                   <img src="Images/11.png" class="max-w-sm rounded-lg shadow-2xl" />
                   <div>
@@ -377,9 +377,53 @@
         </section>
 
     </main>
-    <footer>
-
-    </footer>
+    <footer class="footer p-10 bg-[#131318] text-neutral-content mt-24">
+        <div>
+            <h1 class="text-4xl font-extrabold">Get In Touch</h1>
+            <p class="pt-6">To connect and engage, don't be shy,<br>
+                Get in touch, let collaboration fly.</p>
+                <div class="flex">
+                    <img src="Images/Frame (2).png" alt="">
+                    <p class="pl-2">hockeys@support.com</p>
+                </div>
+                <div class="flex">
+                    <img src="Images/Frame (1).png " alt="">
+                    <p class="pl-2">(+62) 123-321-543</p>
+                </div>
+        </div>
+        
+        <div class="grid justify-evenly grid-rows-1 grid-cols-2 lg:grid-cols-3 ">
+            <nav class="pr-36">
+                <header class="footer-title">Company</header> 
+               <div class="flex flex-col">
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Leadership</a>
+                <a class="link link-hover">Careers</a>
+                <a class="link link-hover">News & Article</a>
+                <a class="link link-hover">Legal Notice</a>
+               </div>
+              </nav> 
+              <nav>
+                <header class="footer-title">Support</header> 
+                <div class="flex flex-col">
+                    <a class="link link-hover">Help Center</a>
+                <a class="link link-hover">FAQ</a>
+                <a class="link link-hover">Ticket Support</a>
+                <a class="link link-hover">Contact Us</a>
+                </div>
+              </nav>
+              <nav>
+                  <header class="footer-title">Services</header> 
+                  <div class="flex flex-col">
+                    <a class="link link-hover">Academy</a>
+                  <a class="link link-hover">Group Lesson</a>
+                  <a class="link link-hover">Private Lesson</a>
+                  <a class="link link-hover">Hockeys for kids</a>
+                  <a class="link link-hover">Hockeys for Adult</a>
+                  </div>
+                </nav> 
+        </div>
+      </footer>
 </body>
 
 </html>
