--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <li><a>Contact</a></li>
                     </ul>
                 </div>
-                <div class="navbar-end flex">
+                <div class="navbar-end lg:flex">
                     <img src="Images/Frame (1).svg" alt="">
                     <a class="btn bg-[#FF4240] text-white ml-4">Get Ticket</a>
                 </div>
@@ -95,7 +95,7 @@
         <!-- Professional Hockeys Club -->
         <section class="mt-24">
             <div class="text-center">
-                <h2 class="text-2xl font-extrabold">Professional Hockeys Club</h2>
+                <h2 class="text-xl lg:text-4xl font-extrabold">Professional Hockeys Club</h2>
                 <p class="pt-12 pr-10 lg:pr-24 pl-10 lg:pl-24 pb16 lg:pb-24">professional hockey clubs play a central
                     role in the competitive landscape of the sport, providing entertainment for fans and serving as a
                     platform for elite athletes to showcase their skills on a grand stage.</p>
@@ -140,16 +140,16 @@
         <!-- Program Sections -->
         <section class="mt-24">
             <div class="text-center">
-                <h3 class="text-4xl font-extrabold">Program Sections</h3>
+                <h3 class=" text-2xl lg:text-4xl font-extrabold">Program Sections</h3>
                 <p class=" mt-10 lg:pr-32 lg:pl-32">An experienced coach guides senior players through strategic
                     training sessions at the dedicated training ground, fostering skill development, team cohesion, and
                     tactical proficiency.</p>
 
             </div>
             <div class="container ">
-            <div class="flex mt-24  lg:justify-evenly">
+            <div class="flex mt-24 flex-col lg:flex-row  lg:justify-evenly">
                 <div >
-                    <div class="card w-max bg-base-100 shadow-xl image-full">
+                    <div class="card lg:w-max bg-base-100 shadow-xl image-full">
                         <figure><img src="Images/2.png" alt="Shoes" /></figure>
                         <div class="card-body">
                           <h2 class="card-title text-2xl font-extrabold mt-32">Teenager Program</h2>
@@ -162,7 +162,7 @@
                       </div>
                 </div>
                 <div>
-                    <div class="card w-max bg-base-100 shadow-xl image-full">
+                    <div class="card lg:w-max bg-base-100 shadow-xl image-full">
                         <figure><img src="Images/3.png" alt="Shoes" /></figure>
                         <div class="card-body">
                           <h2 class="card-title text-2xl font-extrabold mt-32">Junior Program</h2>
@@ -180,10 +180,10 @@
                     <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
                     <div class="absolute">
                       <div class="max-w-md ">
-                        <h1 class="card-title text-2xl font-extrabold mt-32 text-white relative right-96 -bottom-20 ">Professional Program</h1>
-                        <p class="text-white mt-4 relative right-96 -bottom-20">In the professional program, skills refine,
+                        <h1 class="card-title text-2xl font-extrabold mt-32 text-white lg:relative lg:right-96 -bottom-20 ">Professional Program</h1>
+                        <p class="text-white mt-4 lg:relative lg:right-96 -bottom-20">In the professional program, skills refine,
                             Success unfolds, a career incline.</p>
-                            <button class="btn btn-primary bg-[#FF4240] pr-5 pl-5 mt-4 relative right-96 -bottom-20">Register Now!</button>
+                            <button class="btn btn-primary bg-[#FF4240] pr-5 pl-5 mt-4 lg:relative lg:right-96 -bottom-20">Register Now!</button>
                       </div>
                     </div>
                   </div>
@@ -202,7 +202,7 @@
             </div>
             <div class="mt-16 grid grid-rows-1 lg:grid-cols-2 lg:grid-rows-3">
                 <!-- 1st product -->
-                <div class="mt-4 lg:flex ">
+                <div class="mt-4  lg:flex ">
                     <div>
                         <img src="Images/5.png" alt="">
                     </div>
@@ -520,7 +520,7 @@
         </div>
 
         <div class="grid justify-evenly grid-rows-1 grid-cols-2 lg:grid-cols-3 ">
-            <nav class="pr-36">
+            <nav class="lg:pr-36">
                 <header class="footer-title">Company</header>
                 <div class="flex flex-col">
                     <a class="link link-hover">About us</a>
